objects/modigie__Modigie_Service__c.object
<CustomObject>
    <fields>
        <fullName>modigie__Api_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Api Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Modigie Service</relationshipLabel>
        <relationshipName>Modigie_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Job_Source__c</fullName>
        <label>Job Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Job_Type__c</fullName>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Modigie Service</relationshipLabel>
        <relationshipName>Modigie_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modigie</label>
        <referenceTo>modigie__Modigie__c</referenceTo>
        <relationshipLabel>Modigie Service</relationshipLabel>
        <relationshipName>Modigie_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>modigie__Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Rule_Set_Id__c</fullName>
        <label>Rule Set Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Rule_Set_Logic__c</fullName>
        <label>Rule Set Logic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Rule_Set_Name__c</fullName>
        <label>Rule Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Modigie Service</label>
    <listViews>
        <fullName>modigie__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Modigie Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modigie Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>